--- a/SpringBoot/ex3/src/main/resources/templates/sample/ex2.html
+++ b/SpringBoot/ex3/src/main/resources/templates/sample/ex2.html
@@ -52,6 +52,12 @@
     <th:block th:each="dto: ${list}">
       <li th:text="${dto.sno % 5 == 0}?${dto.sno}:${dto.first}"></li>
     </th:block>
+
+  <!-- 기본 객체와 LocalDateTime-->
+  <p> ▼ Thymeleaf localDateTime ▼ </p>
+  <li th:each="dto : ${list}">
+    [[${#numbers.formatInteger(dto.sno,5)}]]
+  </li>
 </ul>
 </body>
 </html>
