--- a/SpringBoot/ex3/src/main/resources/templates/sample/exLink.html
+++ b/SpringBoot/ex3/src/main/resources/templates/sample/exLink.html
@@ -14,6 +14,9 @@
       <a th:href="@{/sample/exView/{sno}(sno = ${dto.sno})}">[[${dto}]]</a>
     </li>
 
+  <li th:each="dto : ${list}" >
+    [[${dto.sno}]]  --- [[${#temporals.format(dto.regTime, 'yyyy/MM/dd')}]]
+  </li>
 </ul>
 </body>
 </html>
