Update 0119 springBoot ex3 layout of Thymeleaf_fragmentTest2

--- a/SpringBoot/ex3/src/main/resources/templates/fragments/fragment1.html
+++ b/SpringBoot/ex3/src/main/resources/templates/fragments/fragment1.html
@@ -7,13 +7,13 @@
 <body>
 
 <div th:fragment="part1">
-  <h2>Part 1</h2>
+  <h5>fragment1.html - Part 1</h5>
 </div>
 <div th:fragment="part2">
-  <h2>Part 2</h2>
+  <h5>fragment1.html - Part 2</h5>
 </div>
 <div th:fragment="part3">
-  <h2>Part 3</h2>
+  <h5>fragment1.html - Part 3</h5>
 </div>
 
 </body>
