--- a/SpringBoot/ex3/src/main/resources/templates/sample/exLayout1.html
+++ b/SpringBoot/ex3/src/main/resources/templates/sample/exLayout1.html
@@ -6,14 +6,28 @@
 </head>
 <body>
 
-<h1>Fragment Test</h1>
-<h1>Layout 1 - 1</h1>
+<h1>Fragment Test 1</h1>
+<h3>exLayout1.html - Layout 1 - 1</h3>
 <div th:replace="~{/fragments/fragment1 :: part1}" ></div>
 
-<h1>Layout 1 - 2</h1>
+<h3>exLayout1.html - Layout 1 - 2</h3>
 <div th:insert="~{/fragments/fragment1 :: part2}" ></div>
 
-<h1>Layout 1 - 3</h1>
+<h3>exLayout1.html - Layout 1 - 3</h3>
+<th:block th:replace="~{/fragments/fragment1 :: part3}" ></th:block>
+<p>=============================================================</p>
+
+<h1>Fragment Test 2</h1>
+<div style="border: 1px solid blue">
+
+<th:block th:replace="~{/fragments/fragment2}"></th:block>
+
+</div>
+<h3>Layout 1 - 1</h3>
+<div th:replace="~{/fragments/fragment1 :: part1}" ></div>
+<h3>Layout 1 - 2</h3>
+<div th:replace="~{/fragments/fragment1 :: part2}" ></div>
+<h3>Layout 1 - 3</h3>
 <th:block th:replace="~{/fragments/fragment1 :: part3}" ></th:block>
 
 </body>
