--- a/SpringBoot/ex3/src/main/resources/templates/layout/layout1.html
+++ b/SpringBoot/ex3/src/main/resources/templates/layout/layout1.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
+<th:block th:fragment="setContent(content)">
+
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
@@ -27,14 +30,22 @@
         background-color: lightsteelblue;
     }
 </style>
+
 <div class="header">
   <h1>HEADER</h1>
 </div>
+
 <div class="content" >
-  <h1>CONTENT</h1>
+<!--  <h1>CONTENT</h1>-->
+  <th:block th:replace = "${content}">
+  </th:block>
 </div>
+
 <div class="footer">
   <h1>FOOTER</h1>
 </div>
+
+
 </body>
+</th:block>
 </html>
